Fixes #107: Inline-flex properly calculates its content size
Signed-off-by: Deyan Yanakiev <kliomba@abv.bg>

--- a/bulma/components/tabs.sass
+++ b/bulma/components/tabs.sass
@@ -30,7 +30,7 @@
         color: $link
   ul
     border-bottom: 1px solid $border
-    display: flex
+    display: inline-flex
   &.is-centered
     a
       padding: 5px 10px
