Add panel, Rename menu

--- a/bulma/layout/header.sass
+++ b/bulma/layout/header.sass
@@ -35,12 +35,7 @@
   img
     max-height: 24px
   a
-    color: $text
     flex: 1
-    &:hover
-      color: $link-hover
-    &.is-active
-      color: $link-active
   .fa
     font-size: 21px
     line-height: 24px
@@ -48,6 +43,14 @@
     margin-left: 10px
   +mobile
     text-align: left
+
+.header-item a,
+a.header-item
+  color: $text
+  &:hover
+    color: $link-hover
+  &.is-active
+    color: $link-active
 
 .header-icon
   +fa(14px, 24px)
