Use inline flex for buttons, Fix progress bars, Remove display helpers

--- a/bulma/elements/buttons.sass
+++ b/bulma/elements/buttons.sass
@@ -26,8 +26,11 @@
     font-size: $size-small
     line-height: 1
     margin-top: 5px
-  .icon.is-small
-    margin: 4px 0
+  .icon
+    &:first-child
+      margin-right: 4px
+    &:last-child
+      margin-left: 4px
   &:hover
     color: $control-hover
   &:active
@@ -77,14 +80,10 @@
       color: $text-strong
   &.is-small
     +button-small
-    .icon.is-small
-      margin: 0
   &.is-medium
     +button-medium
   &.is-large
     +button-large
-    .icon.is-medium
-      margin: -4px 0px -4px -4px
   &.is-fullwidth
     display: block
     width: 100%
@@ -101,12 +100,3 @@
   &[disabled]
     opacity: 0.5
     pointer-events: none
-  +tablet
-    small
-      color: $text
-      left: 0
-      margin-top: 10px
-      position: absolute
-      top: 100%
-      width: 100%
-
