--- a/bulma/elements/progress.sass
+++ b/bulma/elements/progress.sass
@@ -11,7 +11,8 @@
   width: 100%
   &::-webkit-progress-bar
     background: $border
-  &::-webkit-progress-value,
+  &::-webkit-progress-value
+    background: $text
   &::-moz-progress-bar
     background: $text
   &.is-small
@@ -23,7 +24,7 @@
   @each $name, $pair in $colors
     $color: nth($pair, 1)
     &.is-#{$name}
-      &::-webkit-progress-value,
+      &::-webkit-progress-value
+        background: $color
       &::-moz-progress-bar
         background: $color
-
