--- a/css/bulma.css
+++ b/css/bulma.css
@@ -1413,6 +1413,10 @@ table th {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   padding: 3px 10px;
   text-align: center;
   white-space: nowrap;
