Add min-width to the ul so it streches to the .tabs container

--- a/bulma/components/tabs.sass
+++ b/bulma/components/tabs.sass
@@ -31,6 +31,7 @@
   ul
     border-bottom: 1px solid $border
     display: inline-flex
+    min-width: 100%
   &.is-centered
     a
       padding: 5px 10px
