--- a/css/bulma.css
+++ b/css/bulma.css
@@ -3774,10 +3774,11 @@ table th {
 
 .tabs ul {
   border-bottom: 1px solid #d3d6db;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
+  display: -webkit-inline-box;
+  display: -webkit-inline-flex;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  min-width: 100%;
 }
 
 .tabs.is-centered a {
