Added .is-sr and .is-sr-focusable. Closes #150

--- a/bulma/base/helpers.sass
+++ b/bulma/base/helpers.sass
@@ -64,3 +64,23 @@
 .is-unselectable
   +unselectable
 
+// Accessibility
+
+.is-sr
+  position: absolute
+  width: 1px
+  height: 1px
+  margin: -1px
+  padding: 0
+  overflow: hidden
+  clip: rect(0,0,0,0)
+  border: 0
+
+.is-sr-focusable
+  &:active, &:focus
+    position: static
+    width: auto
+    height: auto
+    margin: 0
+    overflow: visible
+    clip: auto
