--- a/bulma/layout/header.sass
+++ b/bulma/layout/header.sass
@@ -41,6 +41,11 @@
     line-height: 24px
   .button + .button
     margin-left: 10px
+  .tag
+    &:first-child
+      margin-right: 5px
+    &:last-child
+      margin-left: 5px
   +mobile
     text-align: left
 
