Fix components code style

--- a/bulma/base/helpers.sass
+++ b/bulma/base/helpers.sass
@@ -19,11 +19,6 @@
 .is-overlay
   +overlay
 
-// Size
-
-.is-fullwidth
-  width: 100%
-
 // Text
 
 .has-text-centered
@@ -55,12 +50,11 @@
 
 // Other
 
-.has-no-margin
-  margin: 0 !important
-
 .is-disabled
   pointer-events: none
 
+.is-marginless
+  margin: 0 !important
+
 .is-unselectable
   +unselectable
-
