Add is-clipped to modal-content - By default the modal allows content to scroll (in both dimensions) and that is good - adding an `is-clipped` class means we can force modal to use `overflow:hidden`

--- a/css/bulma.css
+++ b/css/bulma.css
@@ -4195,6 +4195,10 @@ table th {
   width: 100%;
 }
 
+.modal-content.is-clipped {
+  overflow: hidden;
+}
+
 @media screen and (min-width: 769px) {
   .modal-content {
     margin: 0 auto;
