--- a/sass/components/modal.sass
+++ b/sass/components/modal.sass
@@ -8,6 +8,8 @@
   overflow: auto
   position: relative
   width: 100%
+  &.is-clipped
+    overflow: hidden
   // Responsiveness
   +tablet
     margin: 0 auto
