--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -104,7 +104,7 @@
     display: block
     width: 100%
   &.is-loading
-    color: transparent
+    color: transparent !important
     pointer-events: none
     &:after
       @extend .loader
