add margin 0 auto to nav-center

--- a/sass/components/nav.sass
+++ b/sass/components/nav.sass
@@ -78,6 +78,7 @@ a.nav-item
   align-items: stretch
   display: flex
   justify-content: center
+  margin: 0 auto
 
 .nav-right
   // Responsiveness
