--- a/sass/elements/form.sass
+++ b/sass/elements/form.sass
@@ -15,20 +15,11 @@
   // Sizes
   &.is-small
     +control-small
-    &.is-flat
-      padding: 4px 6px
   &.is-medium
     +control-medium
-    &.is-flat
-      padding: 4px 10px
   &.is-large
     +control-large
-    &.is-flat
-      padding: 4px 12px
   // Modifiers
-  &.is-flat
-    border: none
-    box-shadow: none
   &.is-fullwidth
     display: block
     width: 100%
@@ -98,6 +89,21 @@
   &:hover
     &:after
       border-color: $link-hover
+  &.is-small
+    height: 24px
+    select
+      +control-small
+      padding-right: 28px
+  &.is-medium
+    height: 40px
+    select
+      +control-medium
+      padding-right: 44px
+  &.is-large
+    height: 48px
+    select
+      +control-large
+      padding-right: 52px
 
 .label
   color: $text-strong
@@ -214,13 +220,12 @@
   &.is-grouped
     display: flex
     justify-content: flex-start
-    & > .button,
-    & > .input,
-    & > .select
+    & > .control
       &:not(:last-child)
+        margin-bottom: 0
         margin-right: 10px
-    & > .input
-      flex: 1
+      &.is-expanded
+        flex: 1
     &.is-grouped-centered
       justify-content: center
     &.is-grouped-right
