--- a/sass/elements/form.sass
+++ b/sass/elements/form.sass
@@ -146,6 +146,7 @@
     .select
       border-radius: 0
       margin-right: -1px
+      width: auto
       &:hover
         z-index: 2
       &:active,
@@ -159,10 +160,17 @@
         border-radius: 0 $radius $radius 0
         select
           border-radius: 0 $radius $radius 0
+      &.is-expanded
+        flex: 1
     &.has-addons-centered
       justify-content: center
     &.has-addons-right
       justify-content: flex-end
+    &.has-addons-fullwidth
+      .button,
+      .input,
+      .select
+        flex: 1
   &.has-icon
     & > .fa
       +fa(14px, 24px)
