Add button link inverted style

--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -87,6 +87,11 @@
     &:focus
       background-color: $border
       color: $text-strong
+    &.is-inverted
+      color: $text-invert
+      &:hover,
+      &:focus
+        background-color: transparentize($text-invert, 0.9)
   // Sizes
   &.is-small
     +button-small
