Add menu inverted styles

--- a/sass/components/menu.sass
+++ b/sass/components/menu.sass
@@ -30,3 +30,23 @@
   text-transform: uppercase
   &:not(:first-child)
     margin-top: 20px
+
+.menu
+  // Modifiers
+  &.is-inverted
+    background-color: $black
+    .menu-list
+      a
+        color: $text-invert
+        &:hover
+          background-color: $background-invert
+          color: $link-invert
+        // Modifiers
+        &.is-active
+          background-color: $link-invert
+          color: $link
+      li
+        ul
+          border-left: 1px solid $border-invert
+    .menu-label
+      color: $text-light-invert
