--- a/sass/utilities/variables.sass
+++ b/sass/utilities/variables.sass
@@ -90,14 +90,17 @@ $dark-invert: $light !default
 $body-background: $grey-lighter !default
 
 $background: $grey-lighter !default
+$background-invert: $grey-darker !default
 
 $border: $grey-light !default
+$border-invert: $grey-dark !default
 $border-hover: $grey !default
 
 // Text colors
 
 $text-invert: findColorInvert($text) !default
 $text-light: $grey !default
+$text-light-invert: $grey-dark !default
 $text-strong: $grey-darker !default
 
 // Code colors
