Make Font Awesome icon size relative to the text

--- a/sass/base/classes.sass
+++ b/sass/base/classes.sass
@@ -15,6 +15,7 @@
     max-width: 1200px
 
 .fa
-  font-size: 21px
+  font-size: 150%
+  line-height: 96%
   text-align: center
   vertical-align: top
