--- a/sass/components/menu.sass
+++ b/sass/components/menu.sass
@@ -5,7 +5,7 @@
 
 .menu-list
   a
-    border-radius: 2px
+    border-radius: $radius-small
     color: $text
     display: block
     padding: 5px 10px
