--- a/sass/components/modal.sass
+++ b/sass/components/modal.sass
@@ -26,7 +26,7 @@
 .modal-card
   @extend .modal-content
   background: $white
-  border-radius: 5px
+  border-radius: $radius-large
   display: flex
   flex-direction: column
   max-height: calc(100vh - 40px)
