--- a/sass/components/panel.sass
+++ b/sass/components/panel.sass
@@ -52,6 +52,6 @@ a.panel-block
 
 .panel
   border: 1px solid $border
-  border-radius: 5px
+  border-radius: $radius-large
   &:not(:last-child)
     margin-bottom: 20px
