--- a/sass/utilities/controls.sass
+++ b/sass/utilities/controls.sass
@@ -32,7 +32,7 @@
       color: rgba($control, 0.3)
 
 =control-small
-  border-radius: 2px
+  border-radius: $radius-small
   font-size: 11px
   height: 24px
   line-height: 16px
