--- a/sass/elements/content.sass
+++ b/sass/elements/content.sass
@@ -1,7 +1,7 @@
 .content
   @extend .block
   // Inline
-  a
+  a:not(.button)
     border-bottom: 1px solid $border
     &:visited
       color: $link-visited
