--- a/sass/elements/box.sass
+++ b/sass/elements/box.sass
@@ -1,6 +1,6 @@
 .box
   @extend .block
-  background: $white
+  background-color: $white
   border-radius: $radius-large
   box-shadow: 0 2px 3px rgba($black, 0.1), 0 0 0 1px rgba($black, 0.1)
   display: block
