--- a/sass/elements/content.sass
+++ b/sass/elements/content.sass
@@ -32,7 +32,7 @@
     &:not(:first-child)
       margin-top: 40px
   blockquote
-    background: $background
+    background-color: $background
     border-left: 5px solid $border
     padding: 1.5em
   h1
