--- a/sass/components/card.sass
+++ b/sass/components/card.sass
@@ -43,7 +43,7 @@
     border-right: 1px solid $border
 
 .card
-  background: $white
+  background-color: $white
   box-shadow: 0 2px 3px rgba($black, 0.1), 0 0 0 1px rgba($black, 0.1)
   color: $text
   max-width: 100%
