--- a/sass/components/menu.sass
+++ b/sass/components/menu.sass
@@ -10,11 +10,11 @@
     display: block
     padding: 5px 10px
     &:hover
-      background: $background
+      background-color: $background
       color: $link
     // Modifiers
     &.is-active
-      background: $link
+      background-color: $link
       color: $link-invert
   li
     ul
