--- a/sass/components/modal.sass
+++ b/sass/components/modal.sass
@@ -1,6 +1,6 @@
 .modal-background
   +overlay
-  background: rgba($black, 0.86)
+  background-color: rgba($black, 0.86)
 
 .modal-content
   margin: 0 20px
@@ -25,7 +25,7 @@
 
 .modal-card
   @extend .modal-content
-  background: $white
+  background-color: $white
   border-radius: $radius-large
   display: flex
   flex-direction: column
@@ -35,7 +35,7 @@
 .modal-card-head,
 .modal-card-foot
   align-items: center
-  background: $background
+  background-color: $background
   display: flex
   flex-shrink: 0
   justify-content: flex-start
