--- a/sass/components/panel.sass
+++ b/sass/components/panel.sass
@@ -8,7 +8,7 @@
     line-height: inherit
 
 .panel-heading
-  background: $background
+  background-color: $background
   border-bottom: 1px solid $border
   border-radius: 4px 4px 0 0
   color: $text-strong
@@ -48,7 +48,7 @@
 
 a.panel-block
   &:hover
-    background: $background
+    background-color: $background
 
 .panel
   border: 1px solid $border
