--- a/sass/utilities/controls.sass
+++ b/sass/utilities/controls.sass
@@ -2,7 +2,7 @@
   -moz-appearance: none
   -webkit-appearance: none
   align-items: center
-  background: $control-background
+  background-color: $control-background
   border: 1px solid $control-border
   border-radius: $radius
   color: $control
@@ -24,7 +24,7 @@
     outline: none
   &[disabled],
   &.is-disabled
-    background: $background
+    background-color: $background
     border-color: $control-border
     cursor: not-allowed
     pointer-events: none
