nav-center to work without any other nav

--- a/css/bulma.css
+++ b/css/bulma.css
@@ -1215,7 +1215,6 @@ a.box:active {
 
 .button.is-fullwidth {
   display: -webkit-box;
-  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   width: 100%;
@@ -1847,7 +1846,6 @@ a.box:active {
 .control.has-addons .is-expanded.textarea,
 .control.has-addons .select.is-expanded {
   -webkit-box-flex: 1;
-  -webkit-flex: 1;
       -ms-flex: 1;
           flex: 1;
 }
@@ -1869,7 +1867,6 @@ a.box:active {
 .control.has-addons.has-addons-fullwidth .textarea,
 .control.has-addons.has-addons-fullwidth .select {
   -webkit-box-flex: 1;
-  -webkit-flex: 1;
       -ms-flex: 1;
           flex: 1;
 }
@@ -3038,14 +3035,8 @@ a.box:active {
 
 .column {
   -webkit-box-flex: 1;
-<<<<<<< HEAD
-      -ms-flex: 1;
-          flex: 1;
-=======
-  -webkit-flex: 1 1 auto;
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
->>>>>>> jgthms/master
   padding: 10px;
 }
 
@@ -3753,48 +3744,41 @@ a.box:active {
 @media screen and (min-width: 1180px) {
   .column.is-narrow-widescreen {
     -webkit-box-flex: 0;
-    -webkit-flex: none;
         -ms-flex: none;
             flex: none;
   }
   .column.is-full-widescreen {
     -webkit-box-flex: 0;
-    -webkit-flex: none;
         -ms-flex: none;
             flex: none;
     width: 100%;
   }
   .column.is-three-quarters-widescreen {
     -webkit-box-flex: 0;
-    -webkit-flex: none;
         -ms-flex: none;
             flex: none;
     width: 75%;
   }
   .column.is-two-thirds-widescreen {
     -webkit-box-flex: 0;
-    -webkit-flex: none;
         -ms-flex: none;
             flex: none;
     width: 66.6666%;
   }
   .column.is-half-widescreen {
     -webkit-box-flex: 0;
-    -webkit-flex: none;
         -ms-flex: none;
             flex: none;
     width: 50%;
   }
   .column.is-one-third-widescreen {
     -webkit-box-flex: 0;
-    -webkit-flex: none;
         -ms-flex: none;
             flex: none;
     width: 33.3333%;
   }
   .column.is-one-quarter-widescreen {
     -webkit-box-flex: 0;
-    -webkit-flex: none;
         -ms-flex: none;
             flex: none;
     width: 25%;
@@ -3816,7 +3800,6 @@ a.box:active {
   }
   .column.is-1-widescreen {
     -webkit-box-flex: 0;
-    -webkit-flex: none;
         -ms-flex: none;
             flex: none;
     width: 8.33333%;
@@ -3826,7 +3809,6 @@ a.box:active {
   }
   .column.is-2-widescreen {
     -webkit-box-flex: 0;
-    -webkit-flex: none;
         -ms-flex: none;
             flex: none;
     width: 16.66667%;
@@ -3836,7 +3818,6 @@ a.box:active {
   }
   .column.is-3-widescreen {
     -webkit-box-flex: 0;
-    -webkit-flex: none;
         -ms-flex: none;
             flex: none;
     width: 25%;
@@ -3846,7 +3827,6 @@ a.box:active {
   }
   .column.is-4-widescreen {
     -webkit-box-flex: 0;
-    -webkit-flex: none;
         -ms-flex: none;
             flex: none;
     width: 33.33333%;
@@ -3856,7 +3836,6 @@ a.box:active {
   }
   .column.is-5-widescreen {
     -webkit-box-flex: 0;
-    -webkit-flex: none;
         -ms-flex: none;
             flex: none;
     width: 41.66667%;
@@ -3866,7 +3845,6 @@ a.box:active {
   }
   .column.is-6-widescreen {
     -webkit-box-flex: 0;
-    -webkit-flex: none;
         -ms-flex: none;
             flex: none;
     width: 50%;
@@ -3876,7 +3854,6 @@ a.box:active {
   }
   .column.is-7-widescreen {
     -webkit-box-flex: 0;
-    -webkit-flex: none;
         -ms-flex: none;
             flex: none;
     width: 58.33333%;
@@ -3886,7 +3863,6 @@ a.box:active {
   }
   .column.is-8-widescreen {
     -webkit-box-flex: 0;
-    -webkit-flex: none;
         -ms-flex: none;
             flex: none;
     width: 66.66667%;
@@ -3896,7 +3872,6 @@ a.box:active {
   }
   .column.is-9-widescreen {
     -webkit-box-flex: 0;
-    -webkit-flex: none;
         -ms-flex: none;
             flex: none;
     width: 75%;
@@ -3906,7 +3881,6 @@ a.box:active {
   }
   .column.is-10-widescreen {
     -webkit-box-flex: 0;
-    -webkit-flex: none;
         -ms-flex: none;
             flex: none;
     width: 83.33333%;
@@ -3916,7 +3890,6 @@ a.box:active {
   }
   .column.is-11-widescreen {
     -webkit-box-flex: 0;
-    -webkit-flex: none;
         -ms-flex: none;
             flex: none;
     width: 91.66667%;
@@ -3926,7 +3899,6 @@ a.box:active {
   }
   .column.is-12-widescreen {
     -webkit-box-flex: 0;
-    -webkit-flex: none;
         -ms-flex: none;
             flex: none;
     width: 100%;
@@ -4032,17 +4004,11 @@ a.box:active {
               -ms-grid-row-align: stretch;
           align-items: stretch;
   -webkit-box-flex: 1;
-<<<<<<< HEAD
-      -ms-flex: 1;
-          flex: 1;
-=======
-  -webkit-flex: 1 1 auto;
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
   min-height: -webkit-min-content;
   min-height: -moz-min-content;
   min-height: min-content;
->>>>>>> jgthms/master
 }
 
 .tile.is-ancestor {
@@ -5026,7 +4992,8 @@ a.nav-item.is-tab.is-active {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 @media screen and (min-width: 769px) {
@@ -5593,13 +5560,13 @@ a.panel-block:hover {
 }
 
 .hero.is-white a.nav-item,
-.hero.is-white .nav-item a:not(.button):not(.pagination a) {
+.hero.is-white .nav-item a:not(.button) {
   color: rgba(17, 17, 17, 0.5);
 }
 
 .hero.is-white a.nav-item:hover, .hero.is-white a.nav-item.is-active,
-.hero.is-white .nav-item a:not(.button):not(.pagination a):hover,
-.hero.is-white .nav-item a:not(.button):not(.pagination a).is-active {
+.hero.is-white .nav-item a:not(.button):hover,
+.hero.is-white .nav-item a:not(.button).is-active {
   color: #111;
 }
 
@@ -5684,13 +5651,13 @@ a.panel-block:hover {
 }
 
 .hero.is-black a.nav-item,
-.hero.is-black .nav-item a:not(.button):not(.pagination a) {
+.hero.is-black .nav-item a:not(.button) {
   color: rgba(255, 255, 255, 0.5);
 }
 
 .hero.is-black a.nav-item:hover, .hero.is-black a.nav-item.is-active,
-.hero.is-black .nav-item a:not(.button):not(.pagination a):hover,
-.hero.is-black .nav-item a:not(.button):not(.pagination a).is-active {
+.hero.is-black .nav-item a:not(.button):hover,
+.hero.is-black .nav-item a:not(.button).is-active {
   color: #fff;
 }
 
@@ -5775,13 +5742,13 @@ a.panel-block:hover {
 }
 
 .hero.is-light a.nav-item,
-.hero.is-light .nav-item a:not(.button):not(.pagination a) {
+.hero.is-light .nav-item a:not(.button) {
   color: rgba(105, 112, 122, 0.5);
 }
 
 .hero.is-light a.nav-item:hover, .hero.is-light a.nav-item.is-active,
-.hero.is-light .nav-item a:not(.button):not(.pagination a):hover,
-.hero.is-light .nav-item a:not(.button):not(.pagination a).is-active {
+.hero.is-light .nav-item a:not(.button):hover,
+.hero.is-light .nav-item a:not(.button).is-active {
   color: #69707a;
 }
 
@@ -5866,13 +5833,13 @@ a.panel-block:hover {
 }
 
 .hero.is-dark a.nav-item,
-.hero.is-dark .nav-item a:not(.button):not(.pagination a) {
+.hero.is-dark .nav-item a:not(.button) {
   color: rgba(245, 247, 250, 0.5);
 }
 
 .hero.is-dark a.nav-item:hover, .hero.is-dark a.nav-item.is-active,
-.hero.is-dark .nav-item a:not(.button):not(.pagination a):hover,
-.hero.is-dark .nav-item a:not(.button):not(.pagination a).is-active {
+.hero.is-dark .nav-item a:not(.button):hover,
+.hero.is-dark .nav-item a:not(.button).is-active {
   color: #f5f7fa;
 }
 
@@ -5957,13 +5924,13 @@ a.panel-block:hover {
 }
 
 .hero.is-primary a.nav-item,
-.hero.is-primary .nav-item a:not(.button):not(.pagination a) {
+.hero.is-primary .nav-item a:not(.button) {
   color: rgba(255, 255, 255, 0.5);
 }
 
 .hero.is-primary a.nav-item:hover, .hero.is-primary a.nav-item.is-active,
-.hero.is-primary .nav-item a:not(.button):not(.pagination a):hover,
-.hero.is-primary .nav-item a:not(.button):not(.pagination a).is-active {
+.hero.is-primary .nav-item a:not(.button):hover,
+.hero.is-primary .nav-item a:not(.button).is-active {
   color: white;
 }
 
@@ -6048,13 +6015,13 @@ a.panel-block:hover {
 }
 
 .hero.is-info a.nav-item,
-.hero.is-info .nav-item a:not(.button):not(.pagination a) {
+.hero.is-info .nav-item a:not(.button) {
   color: rgba(255, 255, 255, 0.5);
 }
 
 .hero.is-info a.nav-item:hover, .hero.is-info a.nav-item.is-active,
-.hero.is-info .nav-item a:not(.button):not(.pagination a):hover,
-.hero.is-info .nav-item a:not(.button):not(.pagination a).is-active {
+.hero.is-info .nav-item a:not(.button):hover,
+.hero.is-info .nav-item a:not(.button).is-active {
   color: white;
 }
 
@@ -6139,13 +6106,13 @@ a.panel-block:hover {
 }
 
 .hero.is-success a.nav-item,
-.hero.is-success .nav-item a:not(.button):not(.pagination a) {
+.hero.is-success .nav-item a:not(.button) {
   color: rgba(255, 255, 255, 0.5);
 }
 
 .hero.is-success a.nav-item:hover, .hero.is-success a.nav-item.is-active,
-.hero.is-success .nav-item a:not(.button):not(.pagination a):hover,
-.hero.is-success .nav-item a:not(.button):not(.pagination a).is-active {
+.hero.is-success .nav-item a:not(.button):hover,
+.hero.is-success .nav-item a:not(.button).is-active {
   color: white;
 }
 
@@ -6230,13 +6197,13 @@ a.panel-block:hover {
 }
 
 .hero.is-warning a.nav-item,
-.hero.is-warning .nav-item a:not(.button):not(.pagination a) {
+.hero.is-warning .nav-item a:not(.button) {
   color: rgba(17, 17, 17, 0.5);
 }
 
 .hero.is-warning a.nav-item:hover, .hero.is-warning a.nav-item.is-active,
-.hero.is-warning .nav-item a:not(.button):not(.pagination a):hover,
-.hero.is-warning .nav-item a:not(.button):not(.pagination a).is-active {
+.hero.is-warning .nav-item a:not(.button):hover,
+.hero.is-warning .nav-item a:not(.button).is-active {
   color: rgba(17, 17, 17, 0.5);
 }
 
@@ -6321,13 +6288,13 @@ a.panel-block:hover {
 }
 
 .hero.is-danger a.nav-item,
-.hero.is-danger .nav-item a:not(.button):not(.pagination a) {
+.hero.is-danger .nav-item a:not(.button) {
   color: rgba(255, 255, 255, 0.5);
 }
 
 .hero.is-danger a.nav-item:hover, .hero.is-danger a.nav-item.is-active,
-.hero.is-danger .nav-item a:not(.button):not(.pagination a):hover,
-.hero.is-danger .nav-item a:not(.button):not(.pagination a).is-active {
+.hero.is-danger .nav-item a:not(.button):hover,
+.hero.is-danger .nav-item a:not(.button).is-active {
   color: white;
 }
 
@@ -6406,28 +6373,9 @@ a.panel-block:hover {
 }
 
 .hero.is-fullheight .hero-body > .container {
-<<<<<<< HEAD
-  -webkit-box-align: stretch;
-      -ms-flex-align: stretch;
-          align-items: stretch;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-=======
->>>>>>> jgthms/master
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-<<<<<<< HEAD
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-=======
->>>>>>> jgthms/master
 }
 
 .section {
