--- a/sass/components/nav.sass
+++ b/sass/components/nav.sass
@@ -78,7 +78,8 @@ a.nav-item
   align-items: stretch
   display: flex
   justify-content: center
-  margin: 0 auto
+  margin-left: auto
+  margin-right: auto
 
 .nav-right
   // Responsiveness
