--- a/css/bulma.css
+++ b/css/bulma.css
@@ -253,7 +253,7 @@ code {
 
 hr {
   border-top-color: #d3d6db;
-  margin: 20px 0;
+  margin: 40px 0;
 }
 
 img {
@@ -1788,9 +1788,9 @@ a.box:active {
 @media screen and (min-width: 769px) {
   .control-label {
     -webkit-box-flex: 1;
-    -webkit-flex: 1;
-        -ms-flex: 1;
-            flex: 1;
+    -webkit-flex-grow: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
     margin-right: 20px;
     padding-top: 7px;
     text-align: right;
@@ -1876,9 +1876,9 @@ a.box:active {
 .control.has-addons .is-expanded.textarea,
 .control.has-addons .select.is-expanded {
   -webkit-box-flex: 1;
-  -webkit-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 
 .control.has-addons.has-addons-centered {
@@ -1900,9 +1900,9 @@ a.box:active {
 .control.has-addons.has-addons-fullwidth .textarea,
 .control.has-addons.has-addons-fullwidth .select {
   -webkit-box-flex: 1;
-  -webkit-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 
 .control.has-icon > .fa {
@@ -2021,9 +2021,9 @@ a.box:active {
 
 .control.is-grouped > .control.is-expanded {
   -webkit-box-flex: 1;
-  -webkit-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 
 .control.is-grouped.is-grouped-centered {
@@ -2053,9 +2053,9 @@ a.box:active {
     display: -ms-flexbox;
     display: flex;
     -webkit-box-flex: 5;
-    -webkit-flex: 5;
-        -ms-flex: 5;
-            flex: 5;
+    -webkit-flex-grow: 5;
+        -ms-flex-positive: 5;
+            flex-grow: 5;
   }
 }
 
@@ -2998,9 +2998,9 @@ a.box:active {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-flex: 1;
-  -webkit-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   font-weight: bold;
   padding: 10px;
 }
@@ -3057,9 +3057,9 @@ a.box:active {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-flex: 1;
-  -webkit-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   -webkit-box-pack: center;
   -webkit-justify-content: center;
       -ms-flex-pack: center;
@@ -3093,10 +3093,16 @@ a.box:active {
 }
 
 .column {
+  -webkit-flex-basis: 0;
+      -ms-flex-preferred-size: 0;
+          flex-basis: 0;
   -webkit-box-flex: 1;
-  -webkit-flex: 1 1 auto;
-      -ms-flex: 1 1 auto;
-          flex: 1 1 auto;
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  -webkit-flex-shrink: 1;
+      -ms-flex-negative: 1;
+          flex-shrink: 1;
   padding: 10px;
 }
 
@@ -4110,9 +4116,6 @@ a.box:active {
             flex-wrap: wrap;
   }
   .columns.is-grid > .column {
-    -webkit-flex-basis: 33.3333%;
-        -ms-flex-preferred-size: 33.3333%;
-            flex-basis: 33.3333%;
     max-width: 33.3333%;
     padding: 10px;
     width: 33.3333%;
@@ -4167,10 +4170,16 @@ a.box:active {
       -ms-flex-align: stretch;
               -ms-grid-row-align: stretch;
           align-items: stretch;
+  -webkit-flex-basis: auto;
+      -ms-flex-preferred-size: auto;
+          flex-basis: auto;
   -webkit-box-flex: 1;
-  -webkit-flex: 1 1 auto;
-      -ms-flex: 1 1 auto;
-          flex: 1 1 auto;
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  -webkit-flex-shrink: 1;
+      -ms-flex-negative: 1;
+          flex-shrink: 1;
   min-height: -webkit-min-content;
   min-height: -moz-min-content;
   min-height: min-content;
@@ -4547,9 +4556,9 @@ a.box:active {
 .level-left .level-item.is-flexible,
 .level-right .level-item.is-flexible {
   -webkit-box-flex: 1;
-  -webkit-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 
 @media screen and (max-width: 768px) {
@@ -4622,9 +4631,9 @@ a.box:active {
 
 .level.is-mobile > .level-item:not(.is-narrow) {
   -webkit-box-flex: 1;
-  -webkit-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 
 @media screen and (min-width: 769px) {
@@ -4636,9 +4645,9 @@ a.box:active {
   }
   .level > .level-item:not(.is-narrow) {
     -webkit-box-flex: 1;
-    -webkit-flex: 1;
-        -ms-flex: 1;
-            flex: 1;
+    -webkit-flex-grow: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
   }
 }
 
@@ -4677,9 +4686,9 @@ a.box:active {
 
 .media-content {
   -webkit-box-flex: 1;
-  -webkit-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   text-align: left;
 }
 
@@ -5014,9 +5023,9 @@ a.box:active {
 .modal-card-title {
   color: #222324;
   -webkit-box-flex: 1;
-  -webkit-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   font-size: 24px;
   line-height: 1;
 }
@@ -5031,9 +5040,9 @@ a.box:active {
 
 .modal-card-body {
   -webkit-box-flex: 1;
-  -webkit-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   overflow: auto;
   padding: 20px;
 }
@@ -5175,6 +5184,12 @@ a.nav-item.is-tab.is-active {
   }
 }
 
+@media screen and (min-width: 769px) and (max-width: 979px) {
+  .nav-menu {
+    padding-right: 20px;
+  }
+}
+
 .nav-left {
   -webkit-box-align: stretch;
   -webkit-align-items: stretch;
@@ -5184,10 +5199,13 @@ a.nav-item.is-tab.is-active {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  -webkit-flex-basis: 0;
+      -ms-flex-preferred-size: 0;
+          flex-basis: 0;
   -webkit-box-flex: 1;
-  -webkit-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   -webkit-box-pack: start;
   -webkit-justify-content: flex-start;
       -ms-flex-pack: start;
@@ -5210,6 +5228,8 @@ a.nav-item.is-tab.is-active {
   -webkit-justify-content: center;
       -ms-flex-pack: center;
           justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 @media screen and (min-width: 769px) {
@@ -5222,10 +5242,13 @@ a.nav-item.is-tab.is-active {
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
+    -webkit-flex-basis: 0;
+        -ms-flex-preferred-size: 0;
+            flex-basis: 0;
     -webkit-box-flex: 1;
-    -webkit-flex: 1;
-        -ms-flex: 1;
-            flex: 1;
+    -webkit-flex-grow: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
     -webkit-box-pack: end;
     -webkit-justify-content: flex-end;
         -ms-flex-pack: end;
@@ -5282,6 +5305,13 @@ a.nav-item.is-tab.is-active {
   box-shadow: 0 2px 3px rgba(17, 17, 17, 0.1);
 }
 
+@media screen and (max-width: 979px) {
+  .nav > .container > .nav-left > .nav-item.is-brand:first-child,
+  .container > .nav > .nav-left > .nav-item.is-brand:first-child {
+    padding-left: 20px;
+  }
+}
+
 .pagination {
   -webkit-box-align: center;
   -webkit-align-items: center;
@@ -5324,9 +5354,9 @@ a.nav-item.is-tab.is-active {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-flex: 1;
-  -webkit-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   -webkit-box-pack: center;
   -webkit-justify-content: center;
       -ms-flex-pack: center;
@@ -5347,9 +5377,9 @@ a.nav-item.is-tab.is-active {
   }
   .pagination li {
     -webkit-box-flex: 1;
-    -webkit-flex: 1;
-        -ms-flex: 1;
-            flex: 1;
+    -webkit-flex-grow: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
   }
   .pagination ul {
     margin-top: 10px;
@@ -5517,9 +5547,9 @@ a.panel-block:hover {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-flex: 1;
-  -webkit-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   -webkit-box-pack: start;
   -webkit-justify-content: flex-start;
       -ms-flex-pack: start;
@@ -5593,9 +5623,9 @@ a.panel-block:hover {
 
 .tabs.is-fullwidth li {
   -webkit-box-flex: 1;
-  -webkit-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 
 .tabs.is-toggle a {
@@ -5744,9 +5774,9 @@ a.panel-block:hover {
 
 .hero-body {
   -webkit-box-flex: 1;
-  -webkit-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   padding: 40px 20px;
 }
 
@@ -6637,9 +6667,9 @@ a.panel-block:hover {
 
 .hero.is-fullheight .hero-body > .container {
   -webkit-box-flex: 1;
-  -webkit-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 
 .section {
